# ai-proxy

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/: config.rs  dashboard.rs  main.rs  mitm.rs  proxy.rs  redaction_context.rs  telemetry.rs  telemetry_store.rs
src/middleware/: entropy_scanner.rs  mod.rs  model_scanner.rs  privacy_filter_scanner.rs  structural_scanner.rs
tests/: integration_test.rs
