[package]
name = "ai-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
flate2 = "1"
futures-util = "0.3"
tower = { version = "0.5", features = ["limit"] }
governor = "0.8"
getrandom = "0.3"
url = "2"
zstd = "0.13"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = "0.23"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
