[package]
name = "ai-proxy"
version = "0.1.0"
edition = "2024"
authors = ["Danil Shutsky <thecutcode@gmail.com>"]
description = "Secret redaction reverse proxy for AI coding clients and model APIs"
license = "MIT"
repository = "https://github.com/lee-to/ai-proxy"
readme = "README.md"
keywords = ["proxy", "security", "redaction", "ai", "mitm"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = [
    "/src/**",
    "/tests/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/config.example.toml",
    "/.env.example",
]

[dependencies]
axum = "0.8"
reqwest = { version = "0.13", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
flate2 = "1"
futures-util = "0.3"
tower = { version = "0.5", features = ["limit"] }
governor = "0.10"
getrandom = "0.4"
url = "2"
zstd = "0.13"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = "0.23"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
